# Shapley_MIA

./: README.md  pyproject.toml
MIA/Run Attack/: README.md
SHAP_MIA/aggregators/: fedopt_aggregator.py
SHAP_MIA/alpha_calculation/: alpha_calculation.py  utils.py
SHAP_MIA/dataset_generation/: utils.py
SHAP_MIA/files/: handlers.py
SHAP_MIA/loo_calculation/: loo_calculation.py  utils.py
SHAP_MIA/model/: federated_model.py
SHAP_MIA/node/: federated_node.py
SHAP_MIA/operations/: evaluations.py  orchestrations.py
SHAP_MIA/shapley_calculation/: shapley_calculation.py  utils.py
SHAP_MIA/simulation/: simulation.py
experiments/datasets/: datasets_visualizations.ipynb
experiments/models/: cifar_shadow_model.py  fmnist_model.py  mdoel_summary.ipynb  mnist_model.py  mnist_shadow_model.py  resnet_family.py
experiments/stage_I_model_selection/: model_descriptions.csv  model_listings.ipynb  stage_I_script.py
tables/stationarity/: hs_with_DP_cifar10-5.tex  hs_with_DP_fmnist.tex  hs_with_DP_mnist.tex  hs_with_DP_tissuemnist.tex  hs_without_DP_cifar10-5.tex  hs_without_DP_fmnist.tex  hs_without_DP_mnist.tex  hs_without_DP_tissuemnist.tex  ls_with_DP_cifar10-5.tex  ls_with_DP_fmnist.tex  ls_with_DP_mnist.tex  ls_with_DP_tissuemnist.tex  ls_without_DP_cifar10-5.tex  ls_without_DP_fmnist.tex  ls_without_DP_mnist.tex  ls_without_DP_tissuemnist.tex  uniform_with_DP_cifar10-5.tex  uniform_with_DP_fmnist.tex  uniform_with_DP_mnist.tex  uniform_with_DP_tissuemnist.tex  uniform_without_DP_cifar10-5.tex  uniform_without_DP_fmnist.tex  uniform_without_DP_mnist.tex  (+1 more)
(+773 files in other folders)
