[tool.poetry]
name = "SHAP_MIA"
version = "0.1"
description = ""
authors = ["Scolpe <63779111+Scolpe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "SHAP_MIA"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "== 2.2.0"
torchvision = ">= 0.1.5"
datasets = ">= 2.17.0"
numpy = ">= 1.2.6"
opacus = ">= 1.5.2"
scikit-learn = ">= 1.4"
privacy-meter = ">= 1.0.1"
timm = ">= 1.0.9"
medmnist = ">=3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
